--- a/gateway.html
+++ b/gateway.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page Redesign</title>
+		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -85,12 +85,11 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
-
+				
+				<!-- Summary -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<div class="index align-left">
-
-								<!-- Summary -->
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
@@ -98,73 +97,89 @@
 												<p>Design &amp; Research</p>
 											</header>
 											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
-
 											<h2>Summary</h2>
-
 											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
-
 											<ul>
-												<li><strong>Role:</strong> UI/UX Designer
-												<li><strong>Deliverable:</strong> Responsive gateway page</li>
-												<li><strong>Methods:</strong> Heuristic Evaluation, 
+												<li><strong>Role:</strong> UI/UX Designer</li>
+												<li><strong>Deliverables:</strong> Responsive gateway page</li>
 											</ul>
-
 										</div>
 									</section>
-
 							</div>
-
-
 						</div>
 					</section>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
+									<a href="images/gateway/gateway-heuristic-evaluation.png" data-caption="Conducted a heuristic evaluation on the existing gateway page." class="image">
+										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Heuristic evaluation" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Heuristic Evaluation</h3>
+										<p>Conducted a heuristic evaluation on the existing gateway page.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
+										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Remote user testing" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Remote User Testing</h3>
+										<p>Conducted remote user testing to find usability issues.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Mobile Breakpoint</h3>
+										<p>Screenshot of mobile breakpoint.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
+										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Desktop Breakpoint</h3>
+										<p>Screenshot of deskotp breakpoint.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
+									</a>
+									<div class="caption">
+										<h3>Peapod Mobile</h3>
+										<p>Peapod gateway page on a mobile device.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
+										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
+									</a>
+									<div class="caption">
+										<h3>Peapod Tablet</h3>
+										<p>Peapod gateway page on a tablet.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
@@ -172,7 +187,82 @@
 
 					</section>
 
-				<!-- Three -->
+					<section class="wrapper style1 align-left">
+						<div class="inner medium">
+							<h2>Design Problem</h2>
+							<ul>
+								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
+								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+							</ul>
+							<h2>Methods</h2>
+							<div class="items style1 medium align-center onscroll-fade-in">
+								<section>
+									<span class="icon style2 major fa-object-ungroup"></span>
+									<h3>Wireframing</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-object-group"></span>
+									<h3>Prototyping</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-user"></span>
+									<h3>User Testing</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-comments-o"></span>
+									<h3>Interviews</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-search"></span>
+									<h3>Contextual Inquiry</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic &amp; Accessibility Evaluations</h3>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-copy"></span>
+									<h3>Competitive Analysis</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pencil-square-o"></span>
+									<h3>Storyboarding</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-th"></span>
+									<h3>Card Sorting</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-map-o"></span>
+									<h3>Journey Mapping</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-sitemap"></span>
+									<h3>Affinity Diagramming</h3>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-pencil"></span>
+									<h3>Sketching</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pie-chart"></span>
+									<h3>Surveys</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-book"></span>
+									<h3>Literature Review</h3>
+								</section>
+							</div>
+							<h2>Results</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+						</div>
+					</section>
+
+				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
@@ -193,7 +283,6 @@
 									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
-
 						</div>
 					</section>
 
@@ -207,7 +296,6 @@
 							<p>Copyright &copy; 2017 Tristan Bernardo</p>
 						</div>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
