--- a/ice-burg.html
+++ b/ice-burg.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: About</title>
+		<title>Tristan Bernardo | UI/UX Designer: Ice-Burg Project</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -85,40 +85,34 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
-
-				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
-							<header>
-								<h1>Tristan Bernardo</h1>
-								<p>UI/UX Designer</p>
-							</header>
-							<p class="major"><span class="image left"><img src="images/about/tristan_bio.jpg" alt="Tristan Bernardo" /></span>Currently working as a UI/UX Designer for <a href="http://www.peapod.com" target="_blank">Peapod</a>, and finishing up my master's degree in Human-Computer Interaction, at <a href="http://www.cdm.depaul.edu/academics/Pages/MSInHuman-ComputerInteraction.aspx" target="blank">DePaul University</a>. I love working with smart energetic people. I believe in understanding a problem space, before jumping into a solution. I enjoy collaborating with others, and I often like to sit back and observe how others break down a problem.</p>
-							<p class="major">
-								<ul>
-									<li><strong>Interests:</strong> User-centered Design, Embodied Interaction, Cognitive Psychology
-									<li><strong>Influences:</strong> Don Norman, <i>Design of Everyday Things</i></li>
-									<li><strong>Background:</strong> Visual Design, Web/Print Design
-								</ul>
-							</p>
-							
-						</div>
-						<div class="image">
-							<img src="images/cover-photo.jpg" alt="Image of sketches and notes." />
+				
+				<!-- Summary -->
+					<section class="wrapper style1 align-center">
+						<div class="inner medium">
+							<div class="index align-left">
+									<section class="banner onload-content-fade-right">
+										<div class="content">
+											<header>
+												<h1>Ice-Burg Project</h1>
+												<p>Design &amp; Research</p>
+											</header>
+											<span class="image fit"><img src="images/touching-ice-burg-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+											<h2>Summary</h2>
+											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
+											<ul>
+												<li><strong>Role:</strong> UI/UX Designer</li>
+												<li><strong>Deliverables:</strong> Responsive gateway page</li>
+											</ul>
+										</div>
+									</section>
+							</div>
 						</div>
 					</section>
-
-				<!-- Two -->
-					<section class="wrapper style1 align-center">
-						<div class="inner">
-							<h2>Communication &amp; Collaboration</h2>
-							<p>A huge part of my job depends on effectively communicating with others, be it presenting to stake holders, or collaborating with developers. I've been fortunate to be part of great teams, and work with talented individuals.</p>
-						</div>
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
+									<a href="images/help-section-desktop-1440x900.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
 										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
 									</a>
 									<div class="caption">
@@ -169,7 +163,82 @@
 
 					</section>
 
-				<!-- Three -->
+					<section class="wrapper style1 align-left">
+						<div class="inner medium">
+							<h2>Design Problem</h2>
+							<ul>
+								<li><strong>Lorem Ipsum</strong> Lorem Ipsum</li>
+								<li><strong>Deliverables:</strong> Lorem Ipsum</li>
+							</ul>
+							<h2>Methods</h2>
+							<div class="items style1 medium align-center onscroll-fade-in">
+								<section>
+									<span class="icon style2 major fa-object-ungroup"></span>
+									<h3>Wireframing</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-object-group"></span>
+									<h3>Prototyping</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-user"></span>
+									<h3>User Testing</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-comments-o"></span>
+									<h3>Interviews</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-search"></span>
+									<h3>Contextual Inquiry</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-group"></span>
+									<h3>Observations</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-desktop"></span>
+									<h3>Heuristic &amp; Accessibility Evaluations</h3>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-copy"></span>
+									<h3>Competitive Analysis</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pencil-square-o"></span>
+									<h3>Storyboarding</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-th"></span>
+									<h3>Card Sorting</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-map-o"></span>
+									<h3>Journey Mapping</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-sitemap"></span>
+									<h3>Affinity Diagramming</h3>
+								</section>
+								<section>
+									<span class="icon style2 major  fa-pencil"></span>
+									<h3>Sketching</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-pie-chart"></span>
+									<h3>Surveys</h3>
+								</section>
+								<section>
+									<span class="icon style2 major fa-book"></span>
+									<h3>Literature Review</h3>
+								</section>
+							</div>
+							<h2>Results</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend fringilla ex, vel sodales justo egestas vel. Nam venenatis fermentum sapien, et congue lorem porta eget. Cras nec malesuada arcu, non vulputate leo. Proin finibus mattis luctus. Nullam tincidunt quam vitae varius elementum. Donec ultrices, est non congue hendrerit, massa felis pulvinar risus, a mollis sem tortor vitae libero. Donec nibh quam, ornare eget volutpat vitae, tempus sagittis mauris.</p>
+						</div>
+					</section>
+
+				<!-- Email Form -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
@@ -187,10 +256,9 @@
 									<textarea name="message" id="message" rows="6"></textarea>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" name="submit" id="submit" value="Send Message" /></li>
+									<li><input type="submit" name="submit" id="submit" value="Send Message" class="big wide" /></li>
 								</ul>
 							</form>
-
 						</div>
 					</section>
 
@@ -204,7 +272,6 @@
 							<p>Copyright &copy; 2017 Tristan Bernardo</p>
 						</div>
 					</footer>
-
 			</div>
 
 		<!-- Scripts -->
