--- a/sub-page-template.html
+++ b/sub-page-template.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: Shedd Aquarium Accessibility</title>
+		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page Redesign</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -93,10 +93,10 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Shedd Aquarium Accessibility</h1>
-												<p>Research</p>
+												<h1>Peapod Gateway Page</h1>
+												<p>Design &amp; Research</p>
 											</header>
-											<span class="image fit"><img src="images/tactile-otter-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
 											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 											<ul>
