--- a/gateway.html
+++ b/gateway.html
@@ -184,9 +184,9 @@
 									</div>
 								</article>
 							</div>
-
 					</section>
 
+				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
 							<h2>Design Problem</h2>
