--- a/shedd-aquarium.html
+++ b/shedd-aquarium.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-		<title>Tristan Bernardo | UI/UX Designer: Shedd Aquarium Accessibility</title>
+		<title>Tristan Bernardo | UI/UX Designer: Peapod Gateway Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -93,10 +93,10 @@
 									<section class="banner onload-content-fade-right">
 										<div class="content">
 											<header>
-												<h1>Shedd Aquarium Accessibility</h1>
-												<p>Research</p>
+												<h1>Peapod Gateway Page</h1>
+												<p>Design &amp; Research</p>
 											</header>
-											<span class="image fit"><img src="images/tactile-otter-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
+											<span class="image fit"><img src="images/gateway-mobile-1440x900.jpg" alt="Image of Peapod Gateway on a mobile device" /></span>
 											<h2>Summary</h2>
 											<p>As part of a complete overhaul of the Peapod website, I designed a new responsive Gateway page which resulted in reducing the bounce rate by 30%.</p>
 											<ul>
@@ -112,57 +112,81 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/help-section-desktop-1440x900.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="Test1" />
+									<a href="images/gateway/gateway-heuristic-evaluation.png" data-caption="Conducted a heuristic evaluation on the existing gateway page." class="image">
+										<img src="images/gallery/thumbs/gateway-heuristic-thumb.jpg" alt="Heuristic evaluation" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Heuristic Evaluation</h3>
+										<p>Conducted a heuristic evaluation on the existing gateway page.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-remote-user-testing.png" data-caption="Conducted remote user testing to find usability issues." class="image">
+										<img src="images/gallery/thumbs/gateway-remote-user-testing-thumb.jpg" alt="Remote user testing" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Remote User Testing</h3>
+										<p>Conducted remote user testing to find usability issues.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-mobile-breakpoint.png" data-caption="Screenshot of mobile breakpoint." class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Mobile Breakpoint</h3>
+										<p>Screenshot of mobile breakpoint.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" data-caption="Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="Test2" />
+									<a href="images/gateway/gateway-desktop.png" data-caption="Screenshot of deskotp breakpoint." class="image">
+										<img src="images/gallery/thumbs/gateway-desktop-thumb.jpg" alt="Test2" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Desktop Breakpoint</h3>
+										<p>Screenshot of deskotp breakpoint.</p>
 										<ul class="actions">
-											<li><span class="button small">Details</span></li>
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gateway/gateway-mobile.jpg" data-caption="Peapod gateway page on a mobile device." class="image">
+										<img src="images/gallery/thumbs/gateway-mobile-device-thumb.jpg" alt="Test2" />
+									</a>
+									<div class="caption">
+										<h3>Peapod Mobile</h3>
+										<p>Peapod gateway page on a mobile device.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="images/gateway/gateway-tablet.jpg" data-caption="Peapod gateway page on a tablet." class="image">
+										<img src="images/gallery/thumbs/gateway-tablet-thumb.jpg" alt="Test2" />
+									</a>
+									<div class="caption">
+										<h3>Peapod Tablet</h3>
+										<p>Peapod gateway page on a tablet.</p>
+										<ul class="actions">
+											<li><span class="button small">Enlarge</span></li>
 										</ul>
 									</div>
 								</article>
 							</div>
-
 					</section>
 
+				<!-- Process -->
 					<section class="wrapper style1 align-left">
 						<div class="inner medium">
 							<h2>Design Problem</h2>
