--- a/about.html
+++ b/about.html
@@ -86,8 +86,8 @@
 			<div id="wrapper" class="divided">
 
 				<!-- Bio -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
-						<div class="content">
+					<section class="banner style1 orient-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+						<div class="content align-left">
 							<header>
 								<h1>Tristan Bernardo</h1>
 								<p>UI/UX Designer</p>
