--- a/help-section.html
+++ b/help-section.html
@@ -128,7 +128,7 @@
 										<img src="images/gallery/thumbs/help-section-cardsort1-thumb.jpg" alt="Remote user testing" />
 									</a>
 									<div class="caption">
-										<h3>Remote User Testing</h3>
+										<h3>Open Cardsort</h3>
 										<p>Conducted remote user testing to find usability issues.</p>
 										<ul class="actions">
 											<li><span class="button small">Enlarge</span></li>
